--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,5 +1,5 @@
 header.masthead {
-  /* margin-bottom: 50px; */
+  margin-bottom: 40px;
   background: no-repeat center center;
   background-color: #868e96;
   background-attachment: scroll;
@@ -14,7 +14,7 @@ header.masthead .overlay {
   height: 100%;
   width: 100%;
   background-color: #212529;
-  opacity: 0.5;
+  opacity: 0.1;
 }
 
 header.masthead .page-heading,
