--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,39 @@
 {% include "header.html" %}
 <div class="container">
-  <h1>Hello Flask</h1>
+  <div class="row justify-content-center">
+    <div class="col-xl-6 col-md-8 m-3">
+      <div class="position-relative">
+        <h2 class="display-5">The Art of Minimalism</h2>
+        <p class="lead">Discover the Beauty of Simplicity</p>
+        <a href="#" class="stretched-link"></a>
+      </div>
+      <p>Author: <a href="#" class="link-body-emphasis link-opacity-75 link-underline-opacity-50"><em>Dennis
+            Schwachhofer</a></em> - 12/05/2023
+      </p>
+      <hr>
+    </div>
+    <div class="w-100"></div>
+    <div class="col-xl-6 col-md-8 m-3">
+      <div class="position-relative">
+        <h2 class="display-5">Unleashing Your Creative Potential</h2>
+        <p class="lead">Ignite Your Imagination and Embrace Your Inner Artist</p>
+        <a href="#" class="stretched-link"></a>
+      </div>
+      <p>Author: <a href="#" class="link-body-emphasis link-opacity-75 link-underline-opacity-50"><em>Dennis
+            Schwachhofer</a></em> - 15/04/2023</p>
+      <hr>
+    </div>
+    <div class="w-100"></div>
+    <div class="col-xl-6 col-md-8 m-3">
+      <div class="position-relative">
+        <h2 class="display-5">Exploring World Cuisine</h2>
+        <p class="lead">Embark on a Culinary Adventure Around the Globe</p>
+        <a href="#" class="stretched-link"></a>
+      </div>
+      <p>Author: <a href="#" class="link-body-emphasis link-opacity-75 link-underline-opacity-50"><em>Dennis
+            Schwachhofer</a></em> - 01/01/2022</p>
+      <hr>
+    </div>
+  </div>
 </div>
 {% include "footer.html" %}
