--- a/templates/header.html
+++ b/templates/header.html
@@ -15,7 +15,7 @@
   <div class="container text-uppercase fs-4">
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid col-xl-10">
-        <a class="navbar-brand fs-4" href="#">Dennis's Blog</a>
+        <a class="navbar-brand fs-4" href="{{url_for('home')}}">Dennis's Blog</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
           aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarContent">
           <ul class="navbar-nav">
             <li class="nav-item m-1">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="{{url_for('home')}}">Home</a>
             </li>
             <li class="nav-item m-1">
               <a class="nav-link" href="#">Log In</a>
@@ -32,7 +32,7 @@
               <a class="nav-link" href="#">Register</a>
             </li>
             <li class="nav-item m-1">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="{{url_for('show_about')}}">About</a>
             </li>
             <li class="nav-item m-1">
               <a class="nav-link" href="#">Contact Me</a>
@@ -51,10 +51,14 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>Dennis's Blog</h1>
-            <span class="subheading">A collection of random musings.</span>
+            <h1>{{title}}</h1>
+            <span class="subheading">{{subtitle}}</span>
           </div>
         </div>
       </div>
     </div>
   </header>
+
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-xl-6 col-md-8 m-3">
