--- a/templates/header.html
+++ b/templates/header.html
@@ -12,53 +12,58 @@
 </head>
 
 <body>
-  <div class="container text-uppercase fs-4">
-    <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid col-xl-10">
-        <a class="navbar-brand fs-4" href="{{url_for('home')}}">Dennis's Blog</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
-          aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarContent">
-          <ul class="navbar-nav">
-            <li class="nav-item m-1">
-              <a class="nav-link active" aria-current="page" href="{{url_for('home')}}">Home</a>
-            </li>
-            <li class="nav-item m-1">
-              <a class="nav-link" href="#">Log In</a>
-            </li>
-            <li class="nav-item m-1">
-              <a class="nav-link" href="#">Register</a>
-            </li>
-            <li class="nav-item m-1">
-              <a class="nav-link" href="{{url_for('show_about')}}">About</a>
-            </li>
-            <li class="nav-item m-1">
-              <a class="nav-link" href="#">Contact Me</a>
-            </li>
-          </ul>
+  <div class="d-flex flex-column min-vh-100">
+    <div class="container text-uppercase fs-4">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid col-xl-10">
+          <a class="navbar-brand fs-4" href="{{url_for('home')}}">Dennis's Blog</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
+            aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarContent">
+            <ul class="navbar-nav">
+              <li class="nav-item m-1">
+                <a class="nav-link {%if page == 'home'%} active" aria-current="page{% endif %}"
+                  href="{{url_for('home')}}">Home</a>
+              </li>
+              <li class="nav-item m-1">
+                <a class="nav-link" href="#">Log In</a>
+              </li>
+              <li class="nav-item m-1">
+                <a class="nav-link" href="#">Register</a>
+              </li>
+              <li class="nav-item m-1">
+                <a class="nav-link{%if page == 'about'%} active" aria-current="page{% endif %}"
+                  href="{{url_for('show_about')}}">About</a>
+              </li>
+              <li class="nav-item m-1">
+                <a class="nav-link {%if page == 'contact'%} active" aria-current="page{% endif %}"
+                  href="{{url_for('show_contact')}}">Contact</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
-  </div>
-  <!-- Page Header -->
-  <header class="masthead" style="background-image: url('{{ url_for('static', filename='images/banner-1.jpg') }}')">
+      </nav>
+    </div>
+    <!-- Page Header -->
+    <header class="masthead" style="background-image: url('{{image_url}}')">
 
 
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <div class="site-heading">
-            <h1>{{title}}</h1>
-            <span class="subheading">{{subtitle}}</span>
+      <div class="overlay"></div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 col-md-10 mx-auto">
+            <div class="site-heading banner-text">
+              <h1 class="banner-text">{{title}}</h1>
+              <span class="subheading banner-text">{{subtitle}}</span>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </header>
+    </header>
 
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-xl-6 col-md-8 m-3">
+
+    <main class="container flex-grow-1">
+      <div class="row justify-content-center">
+        <div class="col-xl-6 col-md-8 m-3">
