--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,3 +1,24 @@
 {% include "header.html" %}
 
+<h3>Send a message:</h3>
+<hr>
+<form method="POST">
+  {{ form.hidden_tag() }}
+  <div class="mb-3">
+    {{ form.name.label(class="form-label") }}
+    {{ form.name(class="form-control") }}
+  </div>
+  <div class="mb-3">
+    {{ form.email.label(class="form-label") }}
+    {{ form.email(class="form-control") }}
+  </div>
+  <div class="mb-3">
+    {{ form.message.label(class="form-label") }}
+    {{ form.message(class="form-control", rows=10) }}
+  </div>
+  <div class="mb-3">
+    {{ form.submit(class="btn btn-secondary") }}
+  </div>
+</form>
+
 {% include "footer.html" %}
