--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,6 +1,6 @@
 {% include "header.html" %}
 
-<h3>Send a message:</h3>
+<h3>Leave a message:</h3>
 <hr>
 <form method="POST">
   {{ form.hidden_tag() }}
