added login and register pages

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,6 @@
 {% include "header.html" %}
+<h3>Let me introduce myself.</h3>
+<hr>
 <p>
   I am a dedicated professional with a passion for the intricate world of digital solutions. With over a decade of
   experience in the tech industry, my journey has been one filled with continuous learning and growth. My
