--- a/templates/register.html
+++ b/templates/register.html
@@ -4,8 +4,8 @@
 <form method="Post">
   {{ form.hidden_tag() }}
   <div class="mb-3">
-    {{ form.name.label(class="form-label") }}
-    {{ form.name(class="form-control") }}
+    {{ form.username.label(class="form-label") }}
+    {{ form.username(class="form-control") }}
   </div>
   <div class="mb-3">
     {{ form.email.label(class="form-label") }}
