--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,19 @@
 {% include "header.html" %}
+
+{% for post in posts %}
 <div class="position-relative">
+  <h2 class="display-5">{{post.title}}</h2>
+  <p class="lead">{{post.subtitle}}</p>
+  <a href="{{url_for('show_post', post_id=post.id)}}" class="stretched-link"></a>
+</div>
+<p>Author: <a href="#"
+    class="link-body-emphasis link-opacity-75 link-underline-opacity-50"><em>{{post.author.username}}</a></em>
+  - {{post.date}}
+</p>
+<hr>
+{% endfor %}
+
+{# <div class="position-relative">
   <h2 class="display-5">The Art of Minimalism</h2>
   <p class="lead">Discover the Beauty of Simplicity</p>
   <a href="{{url_for('show_post', post_id=1)}}" class="stretched-link"></a>
@@ -29,6 +43,6 @@
   </div>
   <p>Author: <a href="#" class="link-body-emphasis link-opacity-75 link-underline-opacity-50"><em>Dennis
         Schwachhofer</a></em> - 01/01/2022</p>
-  <hr>
+  <hr> #}
 
   {% include "footer.html" %}
