--- a/templates/post.html
+++ b/templates/post.html
@@ -8,8 +8,8 @@
   </div>
   {% if logged_in and is_admin %}
   <div class="col-lg-4 col-md">
-    <a href="#"><button class="btn btn-primary m-1">Edit</button></a>
-    <a href="#"><button class="btn btn-primary m-1">Delete</button></a>
+    <a href="{{url_for('edit_post', post_id=post_id)}}"><button class="btn btn-primary m-1">Edit</button></a>
+    <a href="{{url_for('delete_post', post_id=post_id)}}"><button class="btn btn-primary m-1">Delete</button></a>
   </div>
   {% endif %}
 </div>
